# server/routes/authRoutes.js
@@ -4,11 +4,11 @@ import auth from '../authorization/auth';
 
 const authRouter=Router();
 
-authRouter.get('/v1/users',users.getAll);
+authRouter.get('/users',users.getAll);
 
-authRouter.post('/v1/auth/signup',users.SignupUser);
-authRouter.post('/v1/auth/signin',users.SigninUser);
+authRouter.post('/auth/signup',users.SignupUser);
+authRouter.post('/auth/signin',users.SigninUser);
 
-authRouter.post('/v2/auth/signup/AdminClient',auth.authorization,users.SignupAdminClient);
+authRouter.post('/auth/signup/AdminClient',auth.authorization,users.SignupAdminClient);
 
 export default authRouter;
