# swagger.yml
@@ -68,7 +68,7 @@ definitions:
       amount:
         type: number
 paths:
-  "/v1/auth/signup":
+  "/v2/auth/signup":
     post:
       tags:
       - User Module
@@ -86,7 +86,7 @@ paths:
           description: Welcome to Banka, Your user account has been created
           schema:
             "$ref": "#/definitions/signup"
-  "/v1/auth/signin":
+  "/v2/auth/signin":
     post:
       tags:
       - User Module
@@ -122,7 +122,7 @@ paths:
           description: Welcome to Banka, Your user account has been created
           schema:
             "$ref": "#/definitions/signup"
-  "/v1/accounts":
+  "/v2/accounts":
     post:
       tags:
       - Accounts Module
@@ -144,7 +144,7 @@ paths:
           description: Bank account created successfully
           schema:
             "$ref": "#/definitions/account"
-  "/v1/account/{accountNumber}":
+  "/v2/account/{accountNumber}":
     patch:
       tags:
       - Accounts Module
@@ -170,7 +170,7 @@ paths:
           description: Operation Successful
           schema:
             "$ref": "#/definitions/accountstatus"
-  "/v1/accounts/{accountNumber}":
+  "/v2/accounts/{accountNumber}":
     delete:
       tags:
       - Accounts Module
@@ -226,7 +226,7 @@ paths:
       - application/json
       responses:
         '200': {}
-  "/v1/accounts?status=active":
+  "/v2/accounts?status=active":
     get:
       tags:
       - Accounts Module
@@ -245,7 +245,7 @@ paths:
       responses:
         '200':
           description: ''
-  "/v1/accounts?status=dormant":
+  "/v2/accounts?status=dormant":
     get:
       tags:
       - Accounts Module
@@ -264,7 +264,7 @@ paths:
       responses:
         '200':
           description: ''
-  "/v1/transactions/{accountNumber}/debit":
+  "/v2/transactions/{accountNumber}/debit":
     post:
       tags:
       - Transactions Module
@@ -290,7 +290,7 @@ paths:
           description: Transaction sucessful
           schema:
             "$ref": "#/definitions/transaction"
-  "/v1/transactions/{accountNumber}/credit}":
+  "/v2/transactions/{accountNumber}/credit":
     post:
       tags:
       - Transactions Module
